fix: align style for notification popups

--- a/swaync/style/notifications.css
+++ b/swaync/style/notifications.css
@@ -20,10 +20,10 @@
 
 .floating-notifications.background .notification-row .notification-background {
   background: alpha(@background, 0.9);
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.6);
-  border: 1px solid @selected;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+  border: 2px solid @selected;
   border-radius: 10px;
-  margin: 16px 16px 0px 0px;
+  margin: 12px 12px 0 0;
   padding: 0;
 }
 
